<resources>
    <string name="app_name">Sidechef</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="title_activity_login">Sign in</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_home__page">Home Page</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="retype_password">Retype Password</string>
    <string name="already_registered">Already Registered?</string>
    <string name="new_recipe">New Recipe</string>
    <string name="logout">Logout</string>
    <string name="missing_name">Missing Name</string>
    <string name="missing_username">Missing Username</string>
    <string name="missing_password">Missing Password</string>
    <string name="password_not_match">Password does not match</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="meal_type">Meal Type</string>
    <string name="cuisine">Cuisine</string>
    <string name="recipe_description">Description</string>
    <string name="ingredients">Ingredients</string>
    <string name="recipe_procedure">Procedure</string>
    <string name="recipe_image">Recipe Image</string>
    <string name="upload">Upload</string>
    <string name="not_registered">Not Registered?</string>
    <string name="image">image</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="email">Email</string>
    <string name="missing_email">Misssing Email</string>
    <string name="menu_My_Recipes">My Recipe</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="password_strength_weak">Weak</string>
    <string name="password_strength_medium">Medium</string>
    <string name="password_strength_strong">Strong</string>
    <string name="password_strength_very_strong">Very Strong</string>
</resources>
