<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.ActivityLogin"
    android:orientation="vertical"
    android:background="#123456"
    android:gravity="center"
    android:padding="40dp">

    <ProgressBar
        android:id="@+id/login_progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyleLarge"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:id="@+id/appname"
        android:text="@string/app_name"
        android:textSize="30sp"
        android:textColor="#ffffff"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:id="@+id/actlogin"
        android:text="@string/title_activity_login"
        android:textSize="25sp"
        android:textColor="#04ea00"
        android:textStyle="bold"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/EmailEditText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/email"
            android:background="#ffffff"
            android:drawableStart="@drawable/ic_person_blue_24dp"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <EditText
            android:id="@+id/PasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="#ffffff"
            android:drawableStart="@drawable/ic_lock_blue_24dp"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/LoginButton"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#04ea00"
        android:textColor="#ffffff"
        android:text="@string/login"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="casual"
            android:text="@string/not_registered"
            android:textColor="#ffffff"
            android:layout_weight="1"
            android:gravity="center"/>

        <TextView
            android:id="@+id/RegisterText"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingStart="0dp"
            android:paddingEnd="10dp"
            android:text="@string/register"
            android:textStyle="bold"
            android:fontFamily="casual"
            android:textColor="#04ea00"
            android:layout_weight="1"
            android:gravity="center"/>
    </LinearLayout>

</LinearLayout>