<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="23dp">

            <TextView
                android:id="@+id/text_alert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/are_you_sure"
                android:textSize="17sp"
                android:layout_centerHorizontal="true"
                android:padding="6dp"/>
            <Button
                android:id="@+id/cnf_no_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"
                android:layout_marginTop="40dp"/>
            <Button
                android:id="@+id/cnf_yes_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="40dp"/>
        </RelativeLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>