<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="10dp"
        app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp">

        <ImageView
            android:id="@+id/UserRecipe_Image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:contentDescription="@string/recipe_image" />

        <TextView
            android:id="@+id/UserRecipe_Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:padding="5dp"
            android:text="@string/recipe_name"
            android:textSize="17sp"
            style="?android:attr/textAppearanceListItemSmall"
            android:textColor="@android:color/black"/>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:layout_alignBottom="@id/UserRecipe_Image">

            <ImageButton
                android:id="@+id/recupdatebutton"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_baseline_update_24"
                android:contentDescription="@string/update"
                android:padding="5dp"
                android:layout_marginEnd="15dp"/>

            <ImageButton
                android:id="@+id/recdeletebutton"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_baseline_delete_24"
                android:contentDescription="@string/delete"
                android:padding="5dp"/>
        </TableRow>

    </RelativeLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>